--- a/index.html
+++ b/index.html
@@ -162,9 +162,22 @@
     <section class="cover">
       <img class="cover__background" src="images/cover-trains.jpg" alt="Поезда">
       <div class="cover__overlay">
-        <h2 class="cover__title">До Байкала «на собаках»</h2>
-        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+        <div class="cover__info">
+          <h2 class="cover__title">До Байкала</br>«на собаках»</h2>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+        </div>
       </div>
+    </section>
+
+    <section class="footer">
+      <nav class="footer__links">
+        <li><a class="footer__link link" href="#">Карты</a></li>
+        <li><a class="footer__link link" href="#">Погода</a></li>
+        <li><a class="footer__link link" href="#">Расписание</a></li>
+        <li><a class="footer__link link" href="#">Календарь</a></li>
+        <li><a class="footer__link link" href="#">Путешествия</a></li>
+      </nav>
+      <p class="footer__copyright">&#169; 2022. Ярослав Сарчук</p>
     </section>
   </div>
 </body>
