--- a/index.html
+++ b/index.html
@@ -37,15 +37,16 @@
           Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их
           в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и
           описали некоторые интересные места, достойные вашего отпуска.</p>
-        <p class="intro__list">Часовых поясов 11</br>
-          Объектов природного наследия ЮНЕСКО 12</br>
-          Объектов культурного наследия ЮНЕСКО 16</br>
-          Природных заповедников 105</br>
+        <p class="intro__list">Часовых поясов 11<br>
+          Объектов природного наследия ЮНЕСКО 12<br>
+          Объектов культурного наследия ЮНЕСКО 16<br>
+          Природных заповедников 105<br>
           Аэропортов 241</p>
       </div>
     </section>
 
     <section class="photo-grid">
+      <h2 class="photo-grid__title">Фотографии</h2>
       <img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="">
       <img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg" alt="">
       <img class="photo-grid__item" src="images/photo-grid-tuman.jpg" alt="">
@@ -157,25 +158,27 @@
             Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
             в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
         </div>
+      </div>
     </section>
 
     <section class="cover">
       <img class="cover__background" src="images/cover-trains.jpg" alt="Поезда">
       <div class="cover__overlay">
         <div class="cover__info">
-          <h2 class="cover__title">До Байкала</br>«на собаках»</h2>
-          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+          <h2 class="cover__title">До Байкала<br>«на собаках»</h2>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+            электричках.</p>
         </div>
       </div>
     </section>
 
     <section class="footer">
       <nav class="footer__links">
-        <li><a class="footer__link link" href="#">Карты</a></li>
-        <li><a class="footer__link link" href="#">Погода</a></li>
-        <li><a class="footer__link link" href="#">Расписание</a></li>
-        <li><a class="footer__link link" href="#">Календарь</a></li>
-        <li><a class="footer__link link" href="#">Путешествия</a></li>
+        <a class="footer__link link" href="#">Карты</a>
+        <a class="footer__link link" href="#">Погода</a>
+        <a class="footer__link link" href="#">Расписание</a>
+        <a class="footer__link link" href="#">Календарь</a>
+        <a class="footer__link link" href="#">Путешествия</a>
       </nav>
       <p class="footer__copyright">&#169; 2022. Ярослав Сарчук</p>
     </section>
