--- a/index.html
+++ b/index.html
@@ -13,22 +13,24 @@
   <div class="page">
     <header class="header">
       <img src="images/header-logo.svg" alt="Россия">
-      <div class="header__lang-options">
-        <a class="header__lang-link header__lang-link_active link" href="#">Ru</a>
-        <a class="header__lang-link link" href="#">En</a>
-      </div>
+      <ul class="header__lang-options">
+        <li><a class="header__lang-link header__lang-link_active link" href="#">Ru</a></li>
+        <li><a class="header__lang-link link" href="#">En</a></li>
+      </ul>
     </header>
 
     <main>
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-        <img class="lead__image" src="images/lead-polka.jpg" alt="Поездка в поезде по России">
-        <p class="lead__caption">ваша полка — верхняя</p>
+        <figure class="lead__figure">
+          <img class="lead__image" src="images/lead-polka.jpg" alt="Поездка в поезде по России">
+          <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+        </figure>
       </section>
 
       <section class="intro">
-        <div class="intro__container">
+        <article class="intro__container">
           <h2 class="intro__title">Чего мы там не видели?</h2>
           <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
             планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На
@@ -38,12 +40,15 @@
             Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их
             в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и
             описали некоторые интересные места, достойные вашего отпуска.</p>
-          <p class="intro__list">Часовых поясов 11
-            Объектов природного наследия ЮНЕСКО 12
-            Объектов культурного наследия ЮНЕСКО 16
-            Природных заповедников 105
-            Аэропортов 241</p>
-        </div>
+          <ul class="intro__list">
+            <li><h3 class="intro__list-item-title">Часовых поясов</h3> <p>11</p></li>
+            <li><h3 class="intro__list-item-title">Объектов природного наследия ЮНЕСКО</h3> <p class="intro__list-item-value">12</p></li>
+            <li><h3 class="intro__list-item-title">Объектов природного наследия ЮНЕСКО</h3> <p class="intro__list-item-value">12</p></li>
+            <li><h3 class="intro__list-item-title">Объектов культурного наследия ЮНЕСКО</h3> <p class="intro__list-item-value">16</p></li>
+            <li><h3 class="intro__list-item-title" >Природных заповедников</h3> <p class="intro__list-item-value">105</p></li>
+            <li><h3 class="intro__list-item-title">Аэропортов</h3> <p class="intro__list-item-value">241</p></li>
+          </ul>
+        </article>
       </section>
 
       <section class="photo-grid">
