--- a/index.html
+++ b/index.html
@@ -13,22 +13,24 @@
   <div class="page">
     <header class="header">
       <img src="images/header-logo.svg" alt="Россия">
-      <div class="header__lang-options">
-        <a class="header__lang-link header__lang-link_active link" href="#">Ru</a>
-        <a class="header__lang-link link" href="#">En</a>
-      </div>
+      <ul class="header__lang-options">
+        <li><a class="header__lang-link header__lang-link_active link" href="#">Ru</a></li>
+        <li><a class="header__lang-link link" href="#">En</a></li>
+      </ul>
     </header>
 
     <main>
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-        <img class="lead__image" src="images/lead-polka.jpg" alt="Поездка в поезде по России">
-        <p class="lead__caption">ваша полка — верхняя</p>
+        <figure class="lead__figure">
+          <img class="lead__image" src="images/lead-polka.jpg" alt="Поездка в поезде по России">
+          <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+        </figure>
       </section>
 
       <section class="intro">
-        <div class="intro__container">
+        <article class="intro__container">
           <h2 class="intro__title">Чего мы там не видели?</h2>
           <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
             планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На
@@ -38,16 +40,33 @@
             Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их
             в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и
             описали некоторые интересные места, достойные вашего отпуска.</p>
-          <p class="intro__list">Часовых поясов 11
-            Объектов природного наследия ЮНЕСКО 12
-            Объектов культурного наследия ЮНЕСКО 16
-            Природных заповедников 105
-            Аэропортов 241</p>
-        </div>
+          <ul class="intro__list">
+            <li>
+              <h3 class="intro__list-item-title">Часовых поясов</h3>
+              <p class="intro__list-item-value">11</p>
+            </li>
+            <li>
+              <h3 class="intro__list-item-title">Объектов природного наследия ЮНЕСКО</h3>
+              <p class="intro__list-item-value">12</p>
+            </li>
+            <li>
+              <h3 class="intro__list-item-title">Объектов культурного наследия ЮНЕСКО</h3>
+              <p class="intro__list-item-value">16</p>
+            </li>
+            <li>
+              <h3 class="intro__list-item-title">Природных заповедников</h3>
+              <p class="intro__list-item-value">105</p>
+            </li>
+            <li>
+              <h3 class="intro__list-item-title">Аэропортов</h3>
+              <p class="intro__list-item-value">241</p>
+            </li>
+          </ul>
+        </article>
       </section>
 
       <section class="photo-grid">
-        <h2 class="photo-grid__title">Фотографии</h2>
+
         <img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="Вид на море из поезда">
         <img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg" alt="Горы в облаках">
         <img class="photo-grid__item" src="images/photo-grid-tuman.jpg" alt="Туман на поле">
@@ -63,11 +82,11 @@
       </section>
 
       <section class="places">
-        <div class="place">
-          <h3 class="place__title">Куршская коса</h3>
+        <article class="place">
+          <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a class="place__link link" href="#">park-kosa.ru</a>
+            <a class="place__link link" href="http://park-kosa.ru/" target="_blank">park-kosa.ru</a>
           </div>
           <img class="place__image" src="images/place-kosa.jpg" alt="Морская коса">
           <div class="place__paragraphs">
@@ -84,12 +103,13 @@
               мест исключает суету, окуная в спокойствие
               природы и запах стального, прохладного моря.</p>
           </div>
-        </div>
-        <div class="place">
-          <h3 class="place__title">Кольский</h3>
+        </article>
+        <article class="place">
+          <h2 class="place__title">Кольский</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a class="place__link link" href="#">National Geographic</a>
+            <a class="place__link link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+              target="_blank">National Geographic</a>
           </div>
           <img class="place__image" src="images/place-kolsky.jpg" alt="Заснеженные горы">
           <div class="place__paragraphs">
@@ -108,12 +128,12 @@
               северное сияние начинает сбываться с билетом
               в Мурманск.</p>
           </div>
-        </div>
-        <div class="place">
-          <h3 class="place__title">Алтай</h3>
+        </article>
+        <article class="place">
+          <h2 class="place__title">Алтай</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a class="place__link link" href="#">YouTube</a>
+            <a class="place__link link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank">YouTube</a>
           </div>
           <img class="place__image" src="images/place-altai.jpg" alt="Ноутбук на фоне леса">
           <div class="place__paragraphs">
@@ -126,12 +146,12 @@
               Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И
               знаменитые манулы — тоже обитатели Алтайского края.</p>
           </div>
-        </div>
-        <div class="place">
-          <h3 class="place__title">Зимний Байкал</h3>
+        </article>
+        <article class="place">
+          <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a class="place__link link" href="#">https://vk.com/baikalmile</a>
+            <a class="place__link link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
           </div>
           <img class="place__image" src="images/place-winter-baikal.jpg" alt="Лёд">
           <div class="place__paragraphs">
@@ -143,12 +163,12 @@
               себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду.
               В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
           </div>
-        </div>
-        <div class="place">
-          <h3 class="place__title">Карелия</h3>
+        </article>
+        <article class="place">
+          <h2 class="place__title">Карелия</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a class="place__link link" href="#">http://vodlozero.ru/</a>
+            <a class="place__link link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
           </div>
           <img class="place__image" src="images/place-karelia.jpg" alt="Лес у реки">
           <div class="place__paragraphs">
@@ -159,28 +179,29 @@
               Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
               в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
           </div>
-        </div>
+        </article>
       </section>
 
       <section class="cover">
-        <img class="cover__background" src="images/cover-trains.jpg" alt="Поезда">
-        <div class="cover__overlay">
+        <a class="cover__link" target="_blank" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+          <img class="cover__background" src="images/cover-trains.jpg" alt="Поезда">
+          <div class="cover__overlay"> </div>
           <div class="cover__info">
             <h2 class="cover__title">До Байкала «на собаках»</h2>
             <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
-              электричках.</p>
+              электричках.  </p>
           </div>
-        </div>
+        </a>
       </section>
     </main>
 
     <footer class="footer">
       <nav class="footer__links">
-        <a class="footer__link link" href="#">Карты</a>
-        <a class="footer__link link" href="#">Погода</a>
-        <a class="footer__link link" href="#">Расписание</a>
-        <a class="footer__link link" href="#">Календарь</a>
-        <a class="footer__link link" href="#">Путешествия</a>
+        <a class="footer__link link" href="https://yandex.ru/maps">Карты</a>
+        <a class="footer__link link" href="https://yandex.ru/pogoda">Погода</a>
+        <a class="footer__link link" href="https://rasp.yandex.ru">Расписание</a>
+        <a class="footer__link link" href="https://calendar.yandex.ru">Календарь</a>
+        <a class="footer__link link" href="https://travel.yandex.ru">Путешествия</a>
       </nav>
       <p class="footer__copyright">&#169; 2022. Ярослав Сарчук</p>
     </footer>
